@@ -312,3 +312,10 @@ replication.limit=3
 #
 
 foreach.max.threads=1024
+
+# controls whether the log file will contain provenance information
+# enabling this will increase the size of log files, sometimes
+# significantly.
+
+provenance.log=false
+
