@@ -1,3 +1,9 @@
+(05/05/09)
+*** New configuration property provenance.log which controls whether verbose
+    provenance-related log information is recorded in the run log file or
+    not. By default, this is false, which means that less information is
+    output by default now than previously.
+
 (04/27/09)
 *** Swift 0.9 built from Swift SVN r2860 and cog SVN r2388
 
